--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <!-- banner section  -->
       <section
-        class="bg-[url('images/banner.png')] bg-no-repeat bg-cover bg-[100%_100%] lg:h-[500px] rounded-3xl mt-4 py-16 relative"
+        class="bg-[url('images/banner.png')] bg-no-repeat bg-center bg-cover lg:bg-[100%_100%] lg:h-[500px] rounded-3xl mt-4 py-16 relative"
       >
         <div class="text-center lg:pt-4 space-y-5 lg:space-y-8">
           <h1 class="text-3xl lg:text-5xl font-bold text-white">
@@ -86,7 +86,7 @@
         <!-- card banner  -->
 
         <div
-          class="flex flex-col lg:flex-row gap-5 justify-around mb-0 w-[70%] mx-auto *:flex *:gap-4 *:bg-white *:rounded-xl *:border-b-[4px] *:border-solid *:border-[#1DD100] *:p-4 absolute -bottom-[300px] lg:-bottom-[50px] left-[15%]"
+          class="hidden lg:flex flex-col lg:flex-row gap-5 justify-around mb-0 w-[70%] mx-auto *:flex *:gap-4 *:bg-white *:rounded-xl *:border-b-[4px] *:border-solid *:border-[#1DD100] *:px-4 *:py-6 absolute *:w-[300px] -bottom-[300px] lg:-bottom-[60px] left-[15%]"
         >
           <div>
             <img src="images/people.png" alt="pepole" />
@@ -112,5 +112,59 @@
         </div>
       </section>
     </header>
+
+    <main class="*:max-w-6xl *:mx-auto *:mt-4">
+      <!-- Best offers for you  -->
+      <section class="lg:pt-12 px-2">
+        <h1 class="text-center pt-4 lg:pt-12 text-3xl font-bold">
+          Best offers for you
+        </h1>
+        <div
+          class="flex flex-col lg:flex-row gap-5 *:rounded-xl *:h-[200px] *:py-8 *:px-4 mt-8 *:flex lg:*:flex-1 *:justify-between *:items-center *:relative"
+        >
+          <div class="bg-[#FFBF0F]">
+            <div class="space-y-2">
+              <h1 class="text-3xl font-bold">15% OFF</h1>
+              <h3 class="font-bold">on your next purchase</h3>
+              <p class="text-[#030712B3]">use by January 2024</p>
+            </div>
+            <div>
+              <h1 class="text-2xl font-bold">NEW15</h1>
+              <p class="text-[#030712B3]">Coupon Code</p>
+            </div>
+
+            <img
+              class="absolute right-[130px] lg:right-[160px]"
+              src="images/cupon-devider.png"
+              alt=""
+            />
+          </div>
+          <div class="bg-[#F78C9C]">
+            <div class="space-y-2">
+              <h1 class="text-3xl font-bold">20% OFF</h1>
+              <h3 class="font-bold">on your next purchase</h3>
+              <p class="text-[#030712B3]">use by January 2024</p>
+            </div>
+            <div>
+              <h1 class="text-2xl font-bold">Couple 20</h1>
+              <p class="text-[#030712B3]">Coupon Code</p>
+            </div>
+
+            <img
+              class="absolute right-[130px] lg:right-[160px]"
+              src="images/cupon-devider.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="text-center mt-8">
+          <button
+            class="px-8 py-4 font-bold border-solid border-[1px] border-[#1DD100] rounded-lg text-[#1DD100]"
+          >
+            See All Offers
+          </button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
