seat section added

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <!-- P.H Paribahan section started -->
 
       <section
-        class="lg:pt-12 px-2 bg-[#F7F8F8] border-t-[3px] border-solid border-[#1DD100] rounded-t-3xl mt-24"
+        class="lg:pt-12 py-10 px-2 bg-[#F7F8F8] border-t-[3px] border-solid border-[#1DD100] rounded-t-3xl mt-24"
       >
         <h1 class="text-center text-3xl font-bold">P.H Paribahan</h1>
         <p class="text-center pt-4 text-[#030712B3]">
@@ -253,8 +253,224 @@
         </div>
 
         <!-- select your seat  -->
-        <div class="h-[300px]"></div>
+        <div class="bg-white max-w-6xl mx-auto mt-8 rounded-xl flex py-6">
+          <div class="w-[60%] px-6">
+            <div class="py-2 border-b-[1px] border-dashed border-[#03071233]">
+              <h1 class="text-xl font-bold pb-2">Select Your Seat</h1>
+            </div>
+            <div
+              class="flex justify-between py-4 border-b-[1px] border-dashed border-[#03071233]"
+            >
+              <div class="flex gap-3">
+                <img src="images/seat-gray.png" alt="" />
+                <h1 class="paragraph-color">Available</h1>
+              </div>
+              <div class="flex gap-3">
+                <img src="images/seat-green-filled.png" alt="" />
+                <h1 class="text-[#1DD100]">Selected</h1>
+              </div>
+            </div>
+            <div class="flex justify-end py-6 px-4">
+              <button
+                class="bg-[#0307120D] px-9 py-3 rounded-lg text-[#030712b5] font-semibold"
+              >
+                <img src="images/wheel.png" alt="" />
+              </button>
+            </div>
+
+            <!-- seat start -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>A</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  A1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  A2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>A3</button>
+                <button>A4</button>
+              </div>
+            </div>
+            <!-- seat sririal b -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>B</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  B1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  B2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>B3</button>
+                <button>B4</button>
+              </div>
+            </div>
+            <!-- seat sirial c -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>C</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  C1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  C2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>C3</button>
+                <button>C4</button>
+              </div>
+            </div>
+            <!-- seat sirial d -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>D</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  D1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  D2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>D3</button>
+                <button>D4</button>
+              </div>
+            </div>
+            <!-- seat sirial e -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>E</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  E1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  E2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>E3</button>
+                <button>E4</button>
+              </div>
+            </div>
+            <!-- seat sirial F -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>F</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  F1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  F2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>F3</button>
+                <button>F4</button>
+              </div>
+            </div>
+            <!-- seat sirial G -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>G</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  G1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  G2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>G3</button>
+                <button>G4</button>
+              </div>
+            </div>
+            <!-- seat sirial H -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>H</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  H1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  H2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>H3</button>
+                <button>H4</button>
+              </div>
+            </div>
+            <!-- seat sirial I -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>I</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  I1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  I2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>I3</button>
+                <button>I4</button>
+              </div>
+            </div>
+            <!-- SEAT SIRIAL J -->
+            <div class="flex gap-10 text-[#030712b5] font-semibold mt-6">
+              <div class="w-[50%] flex justify-between items-center">
+                <span>J</span>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  J1
+                </button>
+                <button class="bg-[#0307120D] px-[50px] py-3 rounded-lg">
+                  J2
+                </button>
+              </div>
+              <div
+                class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-[50px] *:rounded-lg"
+              >
+                <button>J3</button>
+                <button>J4</button>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="w-[40%] px-6 border-l-[1px] border-dashed border-[#03071233]"
+          >
+            <div class="py-2 border-b-[1px] border-dashed border-[#03071233]">
+              <h1 class="text-xl font-bold pb-2">Select Your Seat</h1>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+
+    <footer class="h-[500px] bg-black"></footer>
   </body>
 </html>
