--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!-- style  -->
 
     <style>
+      * {
+        scroll-behavior: smooth;
+      }
       .paragraph-color {
         color: #030712b3;
       }
@@ -88,7 +91,7 @@
           </p>
 
           <button class="px-8 py-4 font-bold bg-[#1DD100] rounded-lg">
-            Buy Tickets
+            <a href="#select-seat"> Buy Tickets</a>
           </button>
         </div>
         <!-- card banner  -->
@@ -174,7 +177,6 @@
         </div>
       </section>
       <!-- P.H Paribahan section started -->
-
       <section
         class="lg:pt-12 py-10 px-2 bg-[#F7F8F8] border-t-[3px] border-solid border-[#1DD100] rounded-t-3xl mt-24"
       >
@@ -204,7 +206,7 @@
                 class="bg-[#1cd10017] flex justify-center mt-4 lg:mt-0 gap-4 lg:px-8 py-3 items-center text-xl rounded-lg text-[#1DD100]"
               >
                 <img src="images/seat-green-filled.png" alt="seat-green" />
-                40 Seats left
+                <span id="total-seat">40</span> Seats left
               </button>
             </div>
 
@@ -246,6 +248,7 @@
 
         <!-- select your seat  -->
         <div
+          id="select-seat"
           class="bg-white lg:max-w-6xl mx-auto mt-8 rounded-xl flex flex-col lg:flex-row py-6"
         >
           <div class="lg:w-[60%] lg:px-6">
@@ -277,12 +280,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>A</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   A1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   A2
                 </button>
@@ -290,8 +293,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>A3</button>
-                <button>A4</button>
+                <button class="seat">A3</button>
+                <button class="seat">A4</button>
               </div>
             </div>
             <!-- seat sririal b -->
@@ -299,12 +302,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>B</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   B1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   B2
                 </button>
@@ -312,8 +315,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>B3</button>
-                <button>B4</button>
+                <button class="seat">B3</button>
+                <button class="seat">B4</button>
               </div>
             </div>
             <!-- seat sirial c -->
@@ -321,12 +324,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>C</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   C1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   C2
                 </button>
@@ -334,8 +337,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>C3</button>
-                <button>C4</button>
+                <button class="seat">C3</button>
+                <button class="seat">C4</button>
               </div>
             </div>
             <!-- seat sirial d -->
@@ -343,12 +346,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>D</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   D1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   D2
                 </button>
@@ -356,8 +359,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>D3</button>
-                <button>D4</button>
+                <button class="seat">D3</button>
+                <button class="seat">D4</button>
               </div>
             </div>
             <!-- seat sirial e -->
@@ -365,12 +368,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>E</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   E1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   E2
                 </button>
@@ -378,8 +381,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>E3</button>
-                <button>E4</button>
+                <button class="seat">E3</button>
+                <button class="seat">E4</button>
               </div>
             </div>
             <!-- seat sirial F -->
@@ -387,12 +390,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>F</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   F1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   F2
                 </button>
@@ -400,8 +403,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>F3</button>
-                <button>F4</button>
+                <button class="seat">F3</button>
+                <button class="seat">F4</button>
               </div>
             </div>
             <!-- seat sirial G -->
@@ -409,12 +412,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>G</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   G1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   G2
                 </button>
@@ -422,8 +425,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>G3</button>
-                <button>G4</button>
+                <button class="seat">G3</button>
+                <button class="seat">G4</button>
               </div>
             </div>
             <!-- seat sirial H -->
@@ -431,12 +434,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>H</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   H1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   H2
                 </button>
@@ -444,8 +447,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>H3</button>
-                <button>H4</button>
+                <button class="seat">H3</button>
+                <button class="seat">H4</button>
               </div>
             </div>
             <!-- seat sirial I -->
@@ -453,12 +456,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>I</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   I1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   I2
                 </button>
@@ -466,8 +469,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>I3</button>
-                <button>I4</button>
+                <button class="seat">I3</button>
+                <button class="seat">I4</button>
               </div>
             </div>
             <!-- SEAT SIRIAL J -->
@@ -475,12 +478,12 @@
               <div class="w-[50%] flex justify-between items-center">
                 <span>J</span>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   J1
                 </button>
                 <button
-                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg"
+                  class="bg-[#0307120D] px-6 lg:px-[50px] py-3 rounded-lg seat"
                 >
                   J2
                 </button>
@@ -488,8 +491,8 @@
               <div
                 class="w-[50%] flex justify-around ml-6 *:bg-[#0307120D] *:px-6 lg:*:px-[50px] *:rounded-lg"
               >
-                <button>J3</button>
-                <button>J4</button>
+                <button class="seat">J3</button>
+                <button class="seat">J4</button>
               </div>
             </div>
           </div>
@@ -584,7 +587,39 @@
         </div>
       </section>
     </main>
-
-    <footer class="h-[500px] bg-black"></footer>
+    <!-- footer section started -->
+    <footer class="px-4 md:px-44 py-5 md:py-20 bg-[#030712] text-white">
+      <div
+        class="flex flex-col md:flex-row md:justify-between md:items-center border-b border-dashed pb-6 gap-y-2 md:gap-y-0"
+      >
+        <div>
+          <h1 class="text-4xl font-medium">P-Ticket</h1>
+          <p class="mt-3 max-w-[374px] text-gray-300">
+            P-Ticket is a digital platform to make your daily commuting better.
+          </p>
+        </div>
+        <div>
+          <p class="text-xl text-gray-100 mb-2">Download our app</p>
+          <p>Google Play</p>
+        </div>
+      </div>
+      <div
+        class="mt-6 flex flex-col md:flex-row md:justify-between md:text-center space-y-2 md:space-y-0"
+      >
+        <p class="text-gray-400">
+          @all rights reserved, P-Ticket services limited.2024
+        </p>
+        <ul
+          class="flex items-center gap-x-4 text-sm md:text-base md:gap-x-6 text-gray-400 font-medium"
+        >
+          <li class="cursor-pointer">Terms & condition</li>
+          <li class="cursor-pointer">Return & refund policy</li>
+          <li class="cursor-pointer">Privacy policy</li>
+        </ul>
+      </div>
+    </footer>
+    <!-- javaScript link -->
+    <script src="script/utility.js"></script>
+    <script src="script/index.js"></script>
   </body>
 </html>
