seat validation added

--- a/index.html
+++ b/index.html
@@ -534,7 +534,11 @@
                   placeholder="Have any copupon?"
                   class="outline-none"
                 />
-                <button class="text-white bg-[#1DD100] px-6 py-2 rounded-lg">
+                <button
+                  id="apply-btn"
+                  class="text-white bg-[#1cd10035] px-6 py-2 rounded-lg"
+                  disabled
+                >
                   Apply
                 </button>
               </div>
